--- a/package.json
+++ b/package.json
@@ -6,16 +6,21 @@
   "type": "module",
   "scripts": {
     "start": "nodemon ./src/app.js",
+    "build:css": "tailwindcss -i ./src/public/css/input.css -o ./src/public/css/output.css --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "daisyui": "^4.12.10",
     "express": "^4.21.0"
   },
   "dependencies": {
+    "express-handlebars": "^8.0.1",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "socket.io": "^4.8.0",
+    "tailwindcss": "^3.4.13"
   }
 }
